--- a/src/Style.css
+++ b/src/Style.css
@@ -51,7 +51,7 @@
 /* ! ============================================================== */
 
 /* * Game Two Section */
-.stopResponding-activity-sec > .holder {
+.stopResponding-activity-sec > .content > .game > .holder {
   background: url('/road-cover.jpg') no-repeat fixed center;
   background-size: cover;
   z-index: -1;
